Added display wardrobe elements and show elements list, working on adding an element to the wardrobe and app design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -22,7 +23,17 @@
         <activity android:name=".WardrobeActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".WardrobeElementAdapter" />
-        <activity android:name=".WardrobeElementView"></activity>
+        <activity android:name=".WardrobeElementView" />
+        <activity android:name=".WardrobeAddElement"></activity>
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.android.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/pictures_path"></meta-data>
+        </provider>
     </application>
 
 </manifest>
