--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 07 19:11:21 CEST 2018
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Tue May 08 13:08:59 CEST 2018
+sdk.dir=C\:\\Users\\adminsitrateur\\AppData\\Local\\Android\\Sdk
