--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 22 10:45:32 CEST 2018
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Thu May 24 16:16:14 CEST 2018
+sdk.dir=C\:\\Users\\adminsitrateur\\AppData\\Local\\Android\\Sdk
