Ended wardrobe element deleting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
         </provider>
 
         <activity android:name=".WardrobeAddElementConfirmation" />
-        <activity android:name=".WardrobeOutfit"></activity>
+        <activity android:name=".WardrobeOutfit" />
+        <activity android:name=".WardrobeElementEdit"></activity>
     </application>
 
 </manifest>
