--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat May 26 14:09:49 CEST 2018
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Sun May 27 12:05:50 CEST 2018
+sdk.dir=C\:\\Users\\adminsitrateur\\AppData\\Local\\Android\\Sdk
