--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 11 14:39:20 CEST 2018
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Wed Jun 13 19:49:49 CEST 2018
+sdk.dir=C\:\\Users\\adminsitrateur\\AppData\\Local\\Android\\Sdk
