--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 28 20:06:25 CEST 2018
-sdk.dir=C\:\\Users\\adminsitrateur\\AppData\\Local\\Android\\Sdk
+#Fri Jun 29 08:56:08 CEST 2018
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
