--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,11 +47,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignUpActivity"></activity>
-        <service android:name="fr.hexus.dresscode.classes.GCMService"
-            android:permission="com.google.android.gms.permission.BIND_NETWORK_TASK_SERVICE"
-            android:exported="true">
+        <service
+            android:exported="false"
+            android:name="fr.hexus.dresscode.classes.DresscodeJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE">
             <intent-filter>
-                <action android:name="com.google.android.gms.gcm.ACTION_TASK_READY"/>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
             </intent-filter>
         </service>
     </application>
