--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,23 +46,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".SignUpActivity" />
+
         <service
+            android:name="fr.hexus.dresscode.retrofit.WardrobeElementCreateJobService"
             android:exported="false"
-            android:name="fr.hexus.dresscode.classes.DresscodeJobService"
             android:permission="android.permission.BIND_JOB_SERVICE">
             <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
         <service
+            android:name="fr.hexus.dresscode.retrofit.WardrobeOutfitCreateJobService"
             android:exported="false"
-            android:name="fr.hexus.dresscode.classes.WardrobeElementCreateJobService"
             android:permission="android.permission.BIND_JOB_SERVICE">
             <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE"/>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
             </intent-filter>
         </service>
+
+        <activity android:name=".WardrobeOutfitView"></activity>
     </application>
 
 </manifest>
