--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,14 @@
             </intent-filter>
         </service>
         <service
+            android:name="fr.hexus.dresscode.retrofit.WardrobeOutfitRemoveJobService"
+            android:exported="false"
+            android:permission="android.permission.BIND_JOB_SERVICE">
+            <intent-filter>
+                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
+            </intent-filter>
+        </service>
+        <service
             android:name="fr.hexus.dresscode.retrofit.GetNewTokenJobService"
             android:exported="false"
             android:permission="android.permission.BIND_JOB_SERVICE">
